# repTile

./: Makefile  README.md  package-lock.json  package.json  reptile.kwinscript
old-stuff/: initial-tiling-tests.js  some-tests.js
old-stuff/typescript-stuff/tiling/: log.ts
pkg/: metadata.json
scripts/: build.sh  clean.sh  install.sh  uninstall.sh
src/config/: config.ui  main.xml  metadata.json
src/icons/: CMakeLists.txt
src/script/: index.js  index.mjs  index.ts
src/script/tiling/: configuration.mjs  hooks.mjs  layout.mjs  tiling-manager.mjs  tilingmanager.ts  window-manager.mjs
